# gemini-exchange-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  private.rs  public.rs  types.rs  util.rs  wsfeed.rs
src/structs/: mod.rs  order.rs  private.rs  wsfeed.rs
