[package]
name = "gemini-exchange-rs"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/masonium/gemini-exchange-rs/"
license-file = "LICENSE.txt"
keywords = ["gemini", "crypto", "exchange", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.2", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"], default-features = false }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tokio-stream = "0.1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "*"
hyper = { version = "0.14", features = ["stream", "client", "http1"] }
hyper-tls = "*"
serde_json = "*"
serde_tuple = "*"
base64 = "*"
rust-crypto = "*"
hex = "*"
